Improve C++ standard passed along by CMake
 - Instead of setting the standard as a property, set it as a compiler
 feature.  Not sure if this makes a difference since it's a private
 flag, but it's an excuse to keep CMakeLists.txt using modern features.
 - Disable compiler extensions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,10 @@ if(HOUSEGUEST_BUILD_TESTS)
                 GTest::Main
             )
             set_target_properties(${real_name} PROPERTIES
-                CXX_STANDARD ${std_version}
+                CXX_EXTENSIONS OFF
+            )
+            target_compile_features(${real_name} PRIVATE
+                cxx_std_${std_version}
             )
             add_test(NAME ${real_name}
                 COMMAND ${real_name} "--gtest_output=xml:${CMAKE_CURRENT_BINARY_DIR}/${real_name}_results.xml"
