Remove assumptions about lock interfaces.
Instead of assuming locks have certain functions (e.g., owns_lock),
houseguest now uses indirect calls via template-specialized classes.
This should make it much easier to specalize against other lock and
mutex types, since now they can be used without modificatin or
inheritance.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ target_compile_features(houseguest INTERFACE
 )
 
 set(headers
+    lock.hpp
     mutex.hpp
     ranged_value.hpp
     synchronize.hpp
